feature/3011: add ss-lib-utility-button

--- a/projects/test-app/src/app/stand/stand.component.html
+++ b/projects/test-app/src/app/stand/stand.component.html
@@ -121,8 +121,11 @@
     [text]="'Кнопка'"
     [icon]="IconType.Bell"
     [iconPosition]="IconPosition.OnlyIcon"
-    [size]="ExtraSize.sm"
+    [size]="ExtraSize.xs"
 />
+<br/>
+
+<ss-lib-utility-button [type]="ButtonType.Utility"></ss-lib-utility-button>
 <br/>
 
 
