--- a/projects/front-components/src/lib/components/buttons/base-button/base-button.component.scss
+++ b/projects/front-components/src/lib/components/buttons/base-button/base-button.component.scss
@@ -2,3 +2,24 @@
     display: flex;
     align-items: center;
 }
+
+button.custom-button {
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: none;
+    cursor: pointer;
+    box-sizing: border-box;
+    -webkit-transition: background-color 100ms linear;
+    -ms-transition: background-color 100ms linear;
+    transition: background-color 100ms linear;
+}
+
+button.custom-button:not(.only-icon) {
+    flex-grow: 1;
+}
+
+button.custom-button:disabled {
+    cursor: default;
+}
