--- a/projects/front-components/src/lib/components/toggle-icon/toggle-icon.component.scss
+++ b/projects/front-components/src/lib/components/toggle-icon/toggle-icon.component.scss
@@ -26,7 +26,7 @@
     justify-content: center;
     width: 20px;
     height: 20px;
-    background: var(--icon-on-action, #FFF);
+    background: var(--surface-primary);
     box-shadow: var(--shadow-sm);
     border-radius: 100%;
     transition: left 0.2s ease-in-out;
