feature/3012: add ss-lib-avatar-button

--- a/projects/test-app/src/app/stand/stand.component.html
+++ b/projects/test-app/src/app/stand/stand.component.html
@@ -173,11 +173,13 @@
 <br>
 
 <span>Пример avatar-dropdown</span>
-<ss-lib-avatar
+
+<ss-lib-avatar-button
     [username]="'ВН'"
     [src]="'https://i.pravatar.cc/300'"
     [popoverTriggerFor]="dropdown1"
 />
+
 <ss-lib-dropdown-list
     #dropdown1
     [headerTemplateRef]="avatarHeader"
@@ -192,6 +194,7 @@
 
 <ng-template #avatarHeader>
     <div class="avatar-tmp">
+
         <ss-lib-avatar
             [username]="'ВН'"
             [src]="'https://i.pravatar.cc/300'"
