--- a/projects/front-components/src/lib/components/buttons/base-button/base-button.component.html
+++ b/projects/front-components/src/lib/components/buttons/base-button/base-button.component.html
@@ -2,11 +2,11 @@
     class="custom-button"
     [ngClass]="['type-' + type(), 'size-' + size(), iconPosition()]"
     [disabled]="disabled()"
-    (mouseenter)="updateState(StateTypes.Hover, true)"
-    (mouseleave)="updateState(StateTypes.Hover, false)"
-    (mousedown)="updateState(StateTypes.Pressed, true)"
-    (mouseup)="updateState(StateTypes.Pressed, false)"
-    (focus)="checkFocus($event)"
+    (mouseenter)="elementState.updateState(state, StateTypes.Hover, true)"
+    (mouseleave)="elementState.updateState(state, StateTypes.Hover, false)"
+    (mousedown)="elementState.updateState(state, StateTypes.Pressed, true)"
+    (mouseup)="elementState.updateState(state, StateTypes.Pressed, false)"
+    (focus)="elementState.checkFocus($event, state)"
 
 >
     @if (icon() | mapper: hasIcon : iconPosition() === IconPosition.OnlyIcon) {
