--- a/projects/front-components/src/lib/components/header/header.component.scss
+++ b/projects/front-components/src/lib/components/header/header.component.scss
@@ -7,7 +7,7 @@
 .ss-lib-header {
   display: flex;
   justify-content: space-between;
-  padding: 16px 12px;
+  padding: 16px 24px 16px 12px;
   border-bottom: 1px solid var(--border-primary);
   align-items: center;
   box-shadow: var(--shadow-xs);  // sm
