--- a/projects/test-app/src/app/layout/layout.component.html
+++ b/projects/test-app/src/app/layout/layout.component.html
@@ -1,7 +1,8 @@
 <ss-lib-canvas
   [leftMenuHeaderTemplateRef]="leftMenuHeaderTemplateRef"
   [rightMenuHeaderTemplateRef]="rightMenuHeaderTemplateRef"
-  [topMenuSidebarTemplateRef]="topMenuSidebarTemplateRef">
+  [menu]="exampleMenu"
+>
   <router-outlet></router-outlet>
 </ss-lib-canvas>
 
