--- a/projects/test-app/src/app/stand/stand.component.scss
+++ b/projects/test-app/src/app/stand/stand.component.scss
@@ -1,3 +1,12 @@
+.dark-close-button{
+    width: 50px;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: #212121;
+}
+
 .avatar-tmp {
     display: flex;
     justify-content: space-between;
