--- a/projects/test-app/src/app/stand/stand.component.html
+++ b/projects/test-app/src/app/stand/stand.component.html
@@ -1,138 +1,138 @@
-<!--<ss-lib-icon [icon]="IconType.Bell" [color]="Colors.IconOnDisabled"/>-->
+<ss-lib-icon [icon]="IconType.Bell" [color]="Colors.IconOnDisabled"/>
 
-<!--<ss-lib-text [type]="TextType.BodyXs" [weight]="TextWeight.Regular">Обычный текст</ss-lib-text>-->
-<!--<ss-lib-text [type]="TextType.BodySm">Обычный текст</ss-lib-text>-->
-<!--<ss-lib-text [type]="TextType.BodyMd">Обычный текст</ss-lib-text>-->
-<!--<ss-lib-text [type]="TextType.BodyLg">Обычный текст</ss-lib-text>-->
-<!--<ss-lib-text [type]="TextType.BodyXl">Обычный текст</ss-lib-text>-->
+<ss-lib-text [type]="TextType.BodyXs" [weight]="TextWeight.Regular">Обычный текст</ss-lib-text>
+<ss-lib-text [type]="TextType.BodySm">Обычный текст</ss-lib-text>
+<ss-lib-text [type]="TextType.BodyMd">Обычный текст</ss-lib-text>
+<ss-lib-text [type]="TextType.BodyLg">Обычный текст</ss-lib-text>
+<ss-lib-text [type]="TextType.BodyXl">Обычный текст</ss-lib-text>
 
-<!--<ss-lib-text [type]="TextType.HeadingXs" [weight]="TextWeight.Regular">Обычный текст</ss-lib-text>-->
-<!--<ss-lib-text [type]="TextType.HeadingXs" [weight]="TextWeight.Medium">Текст медиум</ss-lib-text>-->
-<!--<ss-lib-text [type]="TextType.HeadingXs" [weight]="TextWeight.Semibold">Полу-жирный</ss-lib-text>-->
-<!--<ss-lib-text [type]="TextType.HeadingXs" [weight]="TextWeight.Bold">Жирный текст</ss-lib-text>-->
+<ss-lib-text [type]="TextType.HeadingXs" [weight]="TextWeight.Regular">Обычный текст</ss-lib-text>
+<ss-lib-text [type]="TextType.HeadingXs" [weight]="TextWeight.Medium">Текст медиум</ss-lib-text>
+<ss-lib-text [type]="TextType.HeadingXs" [weight]="TextWeight.Semibold">Полу-жирный</ss-lib-text>
+<ss-lib-text [type]="TextType.HeadingXs" [weight]="TextWeight.Bold">Жирный текст</ss-lib-text>
 
-<!--<ss-lib-button-->
-<!--    [type]="ButtonType.Primary"-->
-<!--    [text]="'Primary xs'"-->
-<!--    [icon]="IconType.Bell"-->
-<!--    [iconPosition]="IconPosition.End"-->
-<!--    [size]="ExtraSize.xs"-->
-<!--/>-->
-<!--<br/>-->
+<ss-lib-button
+    [type]="ButtonType.Primary"
+    [text]="'Primary xs'"
+    [icon]="IconType.Bell"
+    [iconPosition]="IconPosition.End"
+    [size]="ExtraSize.xs"
+/>
+<br/>
 
-<!--<ss-lib-button-->
-<!--    [type]="ButtonType.Primary"-->
-<!--    [text]="'Primary sm'"-->
-<!--    [icon]="IconType.Bell"-->
-<!--    [iconPosition]="IconPosition.End"-->
-<!--    [size]="ExtraSize.sm"-->
-<!--/>-->
-<!--<br/>-->
+<ss-lib-button
+    [type]="ButtonType.Primary"
+    [text]="'Primary sm'"
+    [icon]="IconType.Bell"
+    [iconPosition]="IconPosition.End"
+    [size]="ExtraSize.sm"
+/>
+<br/>
 
-<!--<ss-lib-button-->
-<!--    [type]="ButtonType.Primary"-->
-<!--    [text]="'Primary md'"-->
-<!--    [icon]="IconType.Bell"-->
-<!--    [iconPosition]="IconPosition.End"-->
-<!--    [size]="ExtraSize.md"-->
-<!--/>-->
-<!--<br/>-->
+<ss-lib-button
+    [type]="ButtonType.Primary"
+    [text]="'Primary md'"
+    [icon]="IconType.Bell"
+    [iconPosition]="IconPosition.End"
+    [size]="ExtraSize.md"
+/>
+<br/>
 
-<!--<ss-lib-button-->
-<!--    [type]="ButtonType.Primary"-->
-<!--    [text]="'Primary lg'"-->
-<!--    [icon]="IconType.Bell"-->
-<!--    [iconPosition]="IconPosition.End"-->
-<!--    [size]="ExtraSize.lg"-->
-<!--/>-->
-<!--<br/>-->
+<ss-lib-button
+    [type]="ButtonType.Primary"
+    [text]="'Primary lg'"
+    [icon]="IconType.Bell"
+    [iconPosition]="IconPosition.End"
+    [size]="ExtraSize.lg"
+/>
+<br/>
 
-<!--<ss-lib-button-->
-<!--    [type]="ButtonType.Primary"-->
-<!--    [text]="'Primary lg disabled'"-->
-<!--    [icon]="IconType.Bell"-->
-<!--    [iconPosition]="IconPosition.End"-->
-<!--    [size]="ExtraSize.lg"-->
-<!--    [disabled]="true"-->
-<!--/>-->
-<!--<br/>-->
+<ss-lib-button
+    [type]="ButtonType.Primary"
+    [text]="'Primary lg disabled'"
+    [icon]="IconType.Bell"
+    [iconPosition]="IconPosition.End"
+    [size]="ExtraSize.lg"
+    [disabled]="true"
+/>
+<br/>
 
-<!--<br/>-->
+<br/>
 
-<!--<ss-lib-button-->
-<!--    [type]="ButtonType.Secondary"-->
-<!--    [text]="'Secondary lg'"-->
-<!--    [icon]="IconType.Bell"-->
-<!--    [iconPosition]="IconPosition.End"-->
-<!--    [size]="ExtraSize.lg"-->
-<!--/>-->
-<!--<br/>-->
+<ss-lib-button
+    [type]="ButtonType.Secondary"
+    [text]="'Secondary lg'"
+    [icon]="IconType.Bell"
+    [iconPosition]="IconPosition.End"
+    [size]="ExtraSize.lg"
+/>
+<br/>
 
-<!--<ss-lib-button-->
-<!--    [type]="ButtonType.Ghost"-->
-<!--    [text]="'Ghost lg'"-->
-<!--    [icon]="IconType.Bell"-->
-<!--    [iconPosition]="IconPosition.End"-->
-<!--    [size]="ExtraSize.lg"-->
-<!--/>-->
-<!--<br/>-->
+<ss-lib-button
+    [type]="ButtonType.Ghost"
+    [text]="'Ghost lg'"
+    [icon]="IconType.Bell"
+    [iconPosition]="IconPosition.End"
+    [size]="ExtraSize.lg"
+/>
+<br/>
 
-<!--<ss-lib-button-->
-<!--    [type]="ButtonType.Text"-->
-<!--    [text]="'Text lg'"-->
-<!--    [icon]="IconType.Bell"-->
-<!--    [iconPosition]="IconPosition.End"-->
-<!--    [size]="ExtraSize.lg"-->
-<!--/>-->
-<!--<br/>-->
+<ss-lib-button
+    [type]="ButtonType.Text"
+    [text]="'Text lg'"
+    [icon]="IconType.Bell"
+    [iconPosition]="IconPosition.End"
+    [size]="ExtraSize.lg"
+/>
+<br/>
 
-<!--<span>Кнопки only icon</span>-->
-<!--&lt;!&ndash;  *****   &ndash;&gt;-->
+<span>Кнопки only icon</span>
+<!--  *****   -->
 
-<!--<ss-lib-button-->
-<!--    [type]="ButtonType.Primary"-->
-<!--    [text]="'Кнопка'"-->
-<!--    [icon]="IconType.Bell"-->
-<!--    [iconPosition]="IconPosition.OnlyIcon"-->
-<!--    [size]="ExtraSize.sm"-->
-<!--/>-->
-<!--<br/>-->
+<ss-lib-button
+    [type]="ButtonType.Primary"
+    [text]="'Кнопка'"
+    [icon]="IconType.Bell"
+    [iconPosition]="IconPosition.OnlyIcon"
+    [size]="ExtraSize.sm"
+/>
+<br/>
 
-<!--<ss-lib-button-->
-<!--    [type]="ButtonType.Primary"-->
-<!--    [text]="'Кнопка'"-->
-<!--    [icon]="IconType.Bell"-->
-<!--    [iconPosition]="IconPosition.OnlyIcon"-->
-<!--    [size]="ExtraSize.md"-->
-<!--/>-->
-<!--<br/>-->
+<ss-lib-button
+    [type]="ButtonType.Primary"
+    [text]="'Кнопка'"
+    [icon]="IconType.Bell"
+    [iconPosition]="IconPosition.OnlyIcon"
+    [size]="ExtraSize.md"
+/>
+<br/>
 
-<!--<ss-lib-button-->
-<!--    [type]="ButtonType.Primary"-->
-<!--    [text]="'Кнопка'"-->
-<!--    [icon]="IconType.Bell"-->
-<!--    [iconPosition]="IconPosition.OnlyIcon"-->
-<!--    [size]="ExtraSize.lg"-->
-<!--/>-->
-<!--<br/>-->
+<ss-lib-button
+    [type]="ButtonType.Primary"
+    [text]="'Кнопка'"
+    [icon]="IconType.Bell"
+    [iconPosition]="IconPosition.OnlyIcon"
+    [size]="ExtraSize.lg"
+/>
+<br/>
 
-<!--<ss-lib-button-->
-<!--    [type]="ButtonType.Text"-->
-<!--    [text]="'Кнопка'"-->
-<!--    [icon]="IconType.Bell"-->
-<!--    [iconPosition]="IconPosition.OnlyIcon"-->
-<!--    [size]="ExtraSize.xs"-->
-<!--/>-->
-<!--<br/>-->
+<ss-lib-button
+    [type]="ButtonType.Text"
+    [text]="'Кнопка'"
+    [icon]="IconType.Bell"
+    [iconPosition]="IconPosition.OnlyIcon"
+    [size]="ExtraSize.xs"
+/>
+<br/>
 
-<!--<ss-lib-utility-button />-->
-<!--<br/>-->
+<ss-lib-utility-button/>
+<br/>
 
-<ss-lib-close-button [size]="ExtraSize.xs"/>
+<ss-lib-close-button [type]="ButtonType.CloseDark" [size]="ExtraSize.xs"/>
 <br/>
 
 <div class="dark-close-button">
-<ss-lib-close-button [restrictedType]="ButtonType.CloseDark" [size]="ExtraSize.xs"/>
+<ss-lib-close-button [type]="ButtonType.CloseDark" [size]="ExtraSize.xs"/>
 </div>
 <br/>
 
