--- a/projects/front-components/src/lib/components/text/text.component.html
+++ b/projects/front-components/src/lib/components/text/text.component.html
@@ -1,6 +1,7 @@
 <p
     [ngClass]="[type(), weight()]"
     [class.ellipsis]="isEllipsis()"
+    [class.underline]="isUnderline()"
     [style.color]="color()"
 >
     <ng-content></ng-content>
