--- a/projects/front-components/src/lib/components/text/text.component.scss
+++ b/projects/front-components/src/lib/components/text/text.component.scss
@@ -3,6 +3,10 @@ p.ellipsis {
     overflow: hidden;
 }
 
+p.underline {
+    text-decoration: underline;
+}
+
 p.regular {
     font-weight: 400;
 }
