--- a/projects/test-app/src/app/stand/stand.component.html
+++ b/projects/test-app/src/app/stand/stand.component.html
@@ -139,6 +139,38 @@
 <ss-lib-preview-button [shape]="Shape.Square"/>
 <br/>
 
+<ss-lib-link
+    [type]="ButtonType.LinkBlue"
+    [linkAppearance]="LinkAppearance.Standalone"
+    [text]="'Ссылка Standalone'"
+    [icon]="IconType.Plus"
+    [iconPosition]="IconPosition.Start"
+    [size]="ExtraSize.xs"
+    [disabled]="true"
+/>
+<br/>
+
+<ss-lib-link
+    [type]="ButtonType.LinkBlack"
+    [linkAppearance]="LinkAppearance.Standalone"
+    [text]="'Ссылка Standalone'"
+    [icon]="IconType.Plus"
+    [iconPosition]="IconPosition.Start"
+    [size]="ExtraSize.xs"
+/>
+<br/>
+
+<ss-lib-link
+    [type]="ButtonType.LinkBlue"
+    [linkAppearance]="LinkAppearance.Inline"
+    [text]="'Ссылка Inline'"
+    [icon]="IconType.Plus"
+    [iconPosition]="IconPosition.Start"
+    [size]="ExtraSize.xs"
+    [disabled]="true"
+/>
+<br/>
+
 <ss-lib-toggle [formControl]="toggleCtrl"></ss-lib-toggle>
 <br>
 
