feature/3017 in progress

--- a/projects/test-app/src/app/stand/stand.component.html
+++ b/projects/test-app/src/app/stand/stand.component.html
@@ -288,6 +288,11 @@
     <ss-lib-button [type]="ButtonType.Primary" [text]="'Еще кнопка'"></ss-lib-button>
   </div>
 </ss-lib-empty-state>
+<br>
+<div class="spinner-block">
+  <ss-lib-spinner></ss-lib-spinner>
+</div>
+
 
 
 
