--- a/projects/front-components/src/lib/components/header/header.component.html
+++ b/projects/front-components/src/lib/components/header/header.component.html
@@ -1,4 +1,4 @@
-<div class="ss-lib-header">
+<div class="ss-lib-header" >
   <div class="ss-lib-header__left">
     <ss-lib-button (click)="toggleMenu()" [size]="ExtraSize.md" [type]="ButtonType.Ghost" [icon]="IconType.Burger" [iconPosition]="IconPosition.OnlyIcon"></ss-lib-button>
     <ng-container [ngTemplateOutlet]="leftMenuTemplateRef"></ng-container>
@@ -7,4 +7,7 @@
     <ng-container [ngTemplateOutlet]="rightMenuTemplateRef"></ng-container>
   </div>
 </div>
+<ss-lib-progress class="ss-lib-header__progress"></ss-lib-progress>
+
+
 
