feature/2901: create modal

--- a/projects/front-components/src/lib/components/badge/badge.component.html
+++ b/projects/front-components/src/lib/components/badge/badge.component.html
@@ -1,6 +1,6 @@
 <div class="ss-lib-badge"
-     [class.ss-lib-badge--round]="type() === BadgeType.Round"
-     [class.ss-lib-badge--square]="type() === BadgeType.Square"
+     [class.ss-lib-badge--round]="type() === Shape.Round"
+     [class.ss-lib-badge--square]="type() === Shape.Square"
      [ngStyle]="{ 'padding': padding()}"
 >
 
