--- a/projects/front-components/src/lib/components/buttons/preview-button/preview-button.component.scss
+++ b/projects/front-components/src/lib/components/buttons/preview-button/preview-button.component.scss
@@ -1,6 +1,6 @@
 $preview-background: #000000;
 
-.shape-button-circle {
+.shape-button-round {
     button.custom-button.type-preview {
         border-radius: var(--border-radius-round);
     }
