--- a/projects/front-components/src/lib/components/modal/modal.component.scss
+++ b/projects/front-components/src/lib/components/modal/modal.component.scss
@@ -4,6 +4,8 @@
     display: flex;
     flex-direction: column;
     box-sizing: border-box;
+    background: var(--surface-primary);
+    border-radius: var(--border-radius-xl);
     box-shadow: var(--shadow-xl);
 
     &-header {
