--- a/projects/front-components/src/lib/components/modal/modal.component.html
+++ b/projects/front-components/src/lib/components/modal/modal.component.html
@@ -5,7 +5,12 @@
         [class.header-padding]="modalConfig().showHeaderPadding"
     >
         <div class="ss-modal-header__content">
-            <ss-lib-badge [icon]="IconType.ImagePlus" [size]="ExtraSize.lg"/>
+            <ss-lib-badge [badgeProps]="{
+                icon: badgeProps().icon,
+                size: badgeProps().size,
+                iconColor: badgeProps().iconColor,
+                borderColor: badgeProps().borderColor
+            }"/>
 
             <div class="ss-modal-header__text">
                 <ss-lib-text
