--- a/projects/test-app/src/app/test-modal/test-modal.component.html
+++ b/projects/test-app/src/app/test-modal/test-modal.component.html
@@ -2,9 +2,10 @@
     <ss-lib-modal
         [title]="title()"
         [description]="description()"
-        [icon]="icon()"
+        [badgeProps]="badgeProps()"
         [contentRef]="modalContent"
         [footerRef]="modalFooter"
+        [modalConfig]="modalConfig()"
     ></ss-lib-modal>
 </div>
 
