--- a/projects/front-components/src/lib/components/badge/badge.component.scss
+++ b/projects/front-components/src/lib/components/badge/badge.component.scss
@@ -1,13 +1,12 @@
 .ss-lib-badge {
-  display: inline-block;
-  border: 1px solid var(--border-primary);
-  box-shadow: var(--effects-shadows-5);
+    display: inline-block;
+    box-shadow: 0 1px 2px 0 var(--effects-shadows-5),0 -2px 0 0px var(--effects-shadows-5) inset, 0 0 0 1px var(--effects-shadows-18) inset;
 
-  &--square {
-    border-radius: 10px;
-  }
+    &--square {
+        border-radius: var(--border-radius-lg);
+    }
 
-  &--round {
-    border-radius: 100%;
-  }
+    &--round {
+        border-radius: var(--border-radius-round)
+    }
 }
