--- a/projects/front-components/src/lib/components/badge/badge.component.scss
+++ b/projects/front-components/src/lib/components/badge/badge.component.scss
@@ -1,12 +1,24 @@
 .ss-lib-badge {
     display: inline-block;
-    box-shadow: 0 1px 2px 0 var(--effects-shadows-5),0 -2px 0 0px var(--effects-shadows-5) inset, 0 0 0 1px var(--effects-shadows-18) inset;
+    box-shadow: 0 1px 2px 0 var(--effects-shadows-5), 0 -2px 0 0 var(--effects-shadows-5) inset, 0 0 0 1px var(--app-shadow-xs-skeumorphic-border, var(--effects-shadows-18)) inset;
 
-    &--square {
+    &.size-md {
+        padding: 10px;
+    }
+
+    &.size-lg {
+        padding: 12px;
+    }
+
+    &.size-xl {
+        padding: 14px;
+    }
+
+    &.square {
         border-radius: var(--border-radius-lg);
     }
 
-    &--round {
+    &.round {
         border-radius: var(--border-radius-round)
     }
 }
