--- a/projects/front-components/src/lib/shared/styles/custom-variables.scss
+++ b/projects/front-components/src/lib/shared/styles/custom-variables.scss
@@ -177,7 +177,7 @@
 
     /* Effect Styles  */
     --shadow-xs: 0px 1px 2px 0px var(--effects-shadows-5);
-    --shadow-xs-skeumorphic: 0px 1px 2px 0px var(--effects-shadows-5),0px -2px 0px 0px var(--effects-shadows-5) inset, 0px 0px 0px 1px var(--effects-shadows-18) inset;
+    --shadow-xs-skeumorphic: 0px 1px 2px 0px var(--effects-shadows-5),0px -2px 0px 0px var(--effects-shadows-5) inset, 0px 0px 0px 1px var(--app-shadow-xs-skeumorphic-border, var(--effects-shadows-18)) inset;
     --shadow-sm: 0px 1px 2px -1px var(--effects-shadows-10), 0px 1px 3px 0px var(--effects-shadows-10);
     --shadow-md: 0px 2px 4px -2px var(--effects-shadows-6), 0px 4px 6px -1px var(--effects-shadows-10);
     --shadow-lg: 0px 2px 2px -1px var(--effects-shadows-4), 0px 4px 6px -2px var(--effects-shadows-3), 0px 12px 16px -4px var(--effects-shadows-8);
