feature/2902: fix ss-lib-badge props

--- a/projects/front-components/src/lib/components/badge/badge.component.html
+++ b/projects/front-components/src/lib/components/badge/badge.component.html
@@ -1,6 +1,6 @@
 <div
     class="ss-lib-badge"
-    [ngClass]="[badgeProps().shape, 'size-'+badgeProps().size, status()]"
+    [ngClass]="[badgeProps().shape, 'size-'+badgeProps().size, badgeProps().status]"
     [ngStyle]="{'--app-shadow-xs-skeumorphic-border': statusProps().borderColor}"
 >
     <ss-lib-icon
