--- a/projects/front-components/src/lib/components/confirm/confirm.component.html
+++ b/projects/front-components/src/lib/components/confirm/confirm.component.html
@@ -1,9 +1,10 @@
 <div class="confirm-modal">
     <ss-lib-modal
         [title]="title()"
+        [badgeProps]="badgeProps()"
         [description]="description()"
-        [footerRef]="modalFooter"
         [modalConfig]="modalConfig()"
+        [footerRef]="modalFooter"
     ></ss-lib-modal>
 </div>
 
