--- a/projects/test-app/src/app/stand/stand.component.html
+++ b/projects/test-app/src/app/stand/stand.component.html
@@ -323,19 +323,19 @@
 
     <span> Xl </span>
     <ss-lib-badge
-        [status]="Status.Error"
         [badgeProps]="{
             size: ExtraSize.xl,
             icon: IconType.ImagePlus,
+            status: Status.Error
         }"
     />
 
     <ss-lib-badge
-        [status]="Status.Error"
         [badgeProps]="{
             size: ExtraSize.xl,
             icon: IconType.ImagePlus,
-            shape: Shape.Round
+            shape: Shape.Round,
+            status: Status.Error
         }"
     />
 </div>
