--- a/projects/test-app/src/app/stand/stand.component.html
+++ b/projects/test-app/src/app/stand/stand.component.html
@@ -329,19 +329,19 @@
   <ss-lib-skeleton-block
     [config]="{  width: '300px',
   height: '200px',
-  type: 'square' }">
+  type: Shape.Round }">
   </ss-lib-skeleton-block>
 
   <ss-lib-skeleton-block
     [config]="{  width: '100px',
   height: '10px',
-  type: 'square' }">
+  type: Shape.Square }">
   </ss-lib-skeleton-block>
 
   <ss-lib-skeleton-block
     [config]="{  width: '200px',
   height: '200px',
-  type: 'round' }">
+  type: Shape.Round }">
   </ss-lib-skeleton-block>
 </div>
 
@@ -350,8 +350,6 @@
 <div class="skeleton-table">
   <ss-lib-skeleton-table></ss-lib-skeleton-table>
 </div>
-
-
 
 <ss-lib-button
     [type]="ButtonType.Primary"
