--- a/projects/test-app/src/app/test-modal/test-modal.component.html
+++ b/projects/test-app/src/app/test-modal/test-modal.component.html
@@ -1,11 +1,13 @@
 <div class="test-modal">
     <ss-lib-modal
-        [title]="title()"
-        [description]="description()"
-        [badgeProps]="badgeProps()"
-        [contentRef]="modalContent"
-        [footerRef]="modalFooter"
-        [modalConfig]="modalConfig()"
+        [modalData]="{
+            title: data.title,
+            description: data.description,
+            badgeProps: data.badgeProps,
+            contentRef: modalContent,
+            footerRef: modalFooter,
+            modalConfig: data.modalConfig!
+        }"
     ></ss-lib-modal>
 </div>
 
