feature/3105: add ss-lib-overlay-button, fix styles of preview button

--- a/projects/test-app/src/app/stand/stand.component.html
+++ b/projects/test-app/src/app/stand/stand.component.html
@@ -136,7 +136,12 @@
 </div>
 <br/>
 
-<ss-lib-preview-button [shape]="Shape.Square"/>
+<span>Preview button</span>
+<ss-lib-preview-button/>
+<br/>
+
+<span>Overlay button</span>
+<ss-lib-overlay-button/>
 <br/>
 
 <ss-lib-link
@@ -353,29 +358,29 @@
 <br>
 <br>
 <div style="display: flex; gap: 10px">
-  <ss-lib-skeleton-block
-    [config]="{  width: '300px',
+    <ss-lib-skeleton-block
+        [config]="{  width: '300px',
   height: '200px',
   type: Shape.Round }">
-  </ss-lib-skeleton-block>
+    </ss-lib-skeleton-block>
 
-  <ss-lib-skeleton-block
-    [config]="{  width: '100px',
+    <ss-lib-skeleton-block
+        [config]="{  width: '100px',
   height: '10px',
   type: Shape.Square }">
-  </ss-lib-skeleton-block>
+    </ss-lib-skeleton-block>
 
-  <ss-lib-skeleton-block
-    [config]="{  width: '200px',
+    <ss-lib-skeleton-block
+        [config]="{  width: '200px',
   height: '200px',
   type: Shape.Round }">
-  </ss-lib-skeleton-block>
+    </ss-lib-skeleton-block>
 </div>
 
 <br>
 
 <div class="skeleton-table">
-  <ss-lib-skeleton-table></ss-lib-skeleton-table>
+    <ss-lib-skeleton-table></ss-lib-skeleton-table>
 </div>
 
 <ss-lib-button
