feature/2899 fix по sidebar, мелкие доработки по nav-bar и доработки по header

--- a/projects/front-components/src/lib/components/canvas/canvas.component.html
+++ b/projects/front-components/src/lib/components/canvas/canvas.component.html
@@ -9,6 +9,7 @@
       class="ss-lib-canvas__sidebar"
       [topMenuTemplateRef]="topMenuSidebarTemplateRef"
       [menu]="menu()"
+      (outMenuFromSidebar)="outMenuFromCanvas.emit($event)"
     >
     </ss-lib-sidebar>
 
