--- a/projects/front-components/src/lib/components/nav-icon-button/nav-button.component.scss
+++ b/projects/front-components/src/lib/components/nav-icon-button/nav-button.component.scss
@@ -9,6 +9,7 @@ button.nuv-icon-button {
   background-color: transparent;
   cursor: pointer;
   justify-content: space-between;
+  min-width: 40px;
 
   &--nav-base {
     padding: 8px 10px;
