--- a/projects/front-components/src/lib/components/sidebar/sidebar.component.scss
+++ b/projects/front-components/src/lib/components/sidebar/sidebar.component.scss
@@ -41,6 +41,7 @@
   &__bottom-menu-block {
     display: flex;
     flex-wrap: nowrap;
-    text-wrap: nowrap;padding: 0 8px;
+    text-wrap: nowrap;
+    padding: 0 8px;
   }
 }
